fix: 🐛 z-index of .mw-rcfilters-ui-overlay

--- a/skinStyles/mediawiki/mediawiki.rcfilters.filters.base.styles.less
+++ b/skinStyles/mediawiki/mediawiki.rcfilters.filters.base.styles.less
@@ -22,6 +22,10 @@
 			background-color: var( --color-base--subtle );
 		}
 	}
+
+	.mw-rcfilters-ui-overlay {
+		z-index: ~'calc( '@z-index-page-header~' + 1 )';
+	}
 }
 
 .mw-rcfilters-staticfilters-selected {
